# v4l2-demo

./: .gitignore  CMakeLists.txt  OPTIMIZATION_SUMMARY.md  README.md  YUYV_FORMAT_EXPLANATION.md  build.sh
src/common/: v4l2_utils.cpp  v4l2_utils.h
src/demos/demo1_uyvy422/: main.cpp
